WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202127
PlugInClient::didStartFromOrigin() does not need a sessionID
https://bugs.webkit.org/show_bug.cgi?id=202127
Summary
PlugInClient::didStartFromOrigin() does not need a sessionID
Chris Dumez
Reported
2019-09-23 20:08:37 PDT
PlugInClient::didStartFromOrigin() does not need a sessionID.
Attachments
Patch
(5.22 KB, patch)
2019-09-23 20:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(5.46 KB, patch)
2019-09-23 20:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-23 20:09:20 PDT
Created
attachment 379417
[details]
Patch
Chris Dumez
Comment 2
2019-09-23 20:15:45 PDT
Created
attachment 379418
[details]
Patch
Geoffrey Garen
Comment 3
2019-09-23 20:39:44 PDT
Comment on
attachment 379418
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2019-09-23 21:37:52 PDT
Comment on
attachment 379418
[details]
Patch Clearing flags on attachment: 379418 Committed
r250281
: <
https://trac.webkit.org/changeset/250281
>
WebKit Commit Bot
Comment 5
2019-09-23 21:37:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-09-23 21:38:18 PDT
<
rdar://problem/55649722
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug