PlugInClient::didStartFromOrigin() does not need a sessionID https://bugs.webkit.org/show_bug.cgi?id=202127

Reviewed by Geoffrey Garen.

Source/WebCore:

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::userDidClickSnapshot):
* page/PlugInClient.h:

Source/WebKit:

* WebProcess/WebCoreSupport/WebPlugInClient.cpp:
(WebKit::WebPlugInClient::didStartFromOrigin):
* WebProcess/WebCoreSupport/WebPlugInClient.h:


Canonical link: https://commits.webkit.org/215735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250281 268f45cc-cd09-0410-ab3c-d52691b4dbfc