Source/WebCore/page/PlugInClient.h
@@ -25,7 +25,6 @@
 
 #pragma once
 
-#include <pal/SessionID.h>
 #include <wtf/Forward.h>
 
 namespace WebCore {
@@ -34,7 +33,7 @@ class PlugInClient {
 public:
     virtual void pageDestroyed() = 0;
     virtual bool shouldAutoStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType) = 0;
-    virtual void didStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType, PAL::SessionID) = 0;
+    virtual void didStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType) = 0;
 
 protected:
     virtual ~PlugInClient() = default;
