Source/WebKit/WebProcess/WebCoreSupport/WebPlugInClient.h
@@ -27,7 +27,6 @@
 #define WebPlugInClient_h
 
 #include <WebCore/PlugInClient.h>
-#include <pal/SessionID.h>
 
 namespace WebKit {
 
@@ -42,7 +41,7 @@ public:
 private:
     void pageDestroyed() override;
     bool shouldAutoStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType) override;
-    void didStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType, PAL::SessionID) override;
+    void didStartFromOrigin(const String& pageOrigin, const String& pluginOrigin, const String& mimeType) override;
 
     WebPage& m_webPage;
 };
